v3.3.0
- Optimized performance by caching search.

v3.2.8
- Fixed a bug that effect can show timers on all bar actions by any absence of slot.

v3.2.7
- Adjusted combat state event handler to react with a latency. Bugs have been reported that timers are often reset randomly.

v3.2.6
- Optimized strategies to show alert for triggered actions immediately instead of showing them at their end i.e. Crystal Fragment/Assasin's Will will be alerted instantly.

v3.2.5a
- Removed LibStub optional dependency in manifest txt file.

v3.2.5
- Supported general effect matching with slotted actions i.e. Crystal Fragment/Molten Whip/Power Slash will be matched without special id hard coding.

v3.2.4
- Filtered duration of Major Gallop effect if not mounted.

v3.2.3a
- Adjusted last feature valve i.e. Rapid Maneuver shows its Major Gallop now.

v3.2.3
- Ignored effects that have a much longer duration than the action's i.e. Degeneration now shows its dot timer instead of the long buff timer.

v3.2.2
- Depended on LibTypeRegistry externally.
- Removed LibStub denpendency.

v3.2.1
- Depended on LibTextDict externally.

v3.2.0
- Depended on LibAddonMenu-2.0 library externally.
- Planned to remove LibStub.

v3.1.30
- Fxied a layer bug of cooldown lines in shift bar.

v3.1.29
- Optimized action model to store related abilities for matching i.e. timers can continue to show after performing Assassin's Will.

v3.1.28
- Optimized actions matching i.e. Blocade timer is avoided matching with Balance by 'Off Balance'.

v3.1.27
- Re-implemented cooldown lines.

v3.1.26
- Added options for stack label font.

v3.1.25
- Fixed a bug that effects of player pet wrongly reset when switching reticle target i.e. timer of Dark Shade is now kept when target changes.

v3.1.24
- Fixed a bug of effects matching repeated actions in short time.

v3.1.23
- Adjusted the layer of shift bar to make it possible to display behind action bar.
- Added an option to set label verticle offset in shift bar.